--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !.yarn/releases
 !.yarn/versions
 
+package-lock.json
+
 # testing
 /coverage
 
@@ -39,3 +41,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
