--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "@xyflow/react": "^12.9.2",
     "ai": "^5.0.72",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
